# hot-reload

./: .editorconfig  .gdtoolkit  .gitignore  README.md  icon.svg.import  justfile  main.gd  main.gd.uid  main.tscn  project.godot  pyproject.toml
.github/workflows/: ci.yml
addons/Gedis/: gedis.gd  icon.png.import  plugin.cfg  plugin.gd
addons/gdUnit4/: plugin.gd.uid
addons/gut/: GutScene.gd.uid  UserFileViewer.gd.uid  autofree.gd.uid  awaiter.gd.uid  collected_script.gd.uid  collected_test.gd.uid  comparator.gd.uid  compare_result.gd.uid  diff_formatter.gd.uid  diff_tool.gd.uid  double_tools.gd.uid  doubler.gd.uid  dynamic_gdscript.gd.uid  gut.gd.uid  gut_cmdln.gd.uid  gut_config.gd.uid  gut_loader.gd.uid  gut_plugin.gd.uid  gut_to_move.gd.uid  gut_vscode_debugger.gd.uid  hook_script.gd.uid  inner_class_registry.gd.uid  input_factory.gd.uid  input_sender.gd.uid  junit_xml_export.gd.uid  lazy_loader.gd.uid  logger.gd.uid  method_maker.gd.uid  one_to_many.gd.uid  orphan_counter.gd.uid  parameter_factory.gd.uid  parameter_handler.gd.uid  printers.gd.uid  result_exporter.gd.uid  script_parser.gd.uid  signal_watcher.gd.uid  spy.gd.uid  strutils.gd.uid  stub_params.gd.uid  stubber.gd.uid  (+8 more)
components/: player_input_synchronizer_component.gd  player_input_synchronizer_component.gd.uid  player_input_synchronizer_component.tscn
core/player/: player.gd  player.tscn
docs/: 01-Hot-Reload.md  02-Hot-Reload-Tooling.md
entities/player/: player.gd  player.tscn
scripts/: format-check.sh  format.sh  lint.sh  setup-tools.sh
ui/: main_menu.gd  main_menu.gd.uid  main_menu.tscn
(+218 files in other folders)
