[project]
name = "hot-reloaded"
version = "0.0.0"
description = "Dev tooling for formatting and linting GDScript"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
# Development-only tools managed by uv
# - gdtoolkit provides:
#   - gdformat: GDScript formatter
#   - gdlint: GDScript linter
# Pin the version to keep consistent results
dev = [
  "gdtoolkit==4.2.2",
]

[tool.uv]
# When running `uv sync` with no flags, install the dev tool group
default-groups = ["dev"]

