[project]
name = "hot-reload"
version = "0.0.0"
description = "Dev tooling for formatting and linting GDScript"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]

dev = [
  "gdtoolkit",
  "setuptools",
]

[tool.uv]
default-groups = ["dev"]

[tool.gdformat]
line_length = 50
indent_size = 4
use_tabs = true
